mediumDevices overflow fixed

--- a/src/Pages/About/aboutpage.module.scss
+++ b/src/Pages/About/aboutpage.module.scss
@@ -17,10 +17,14 @@ body{
 .about {
 
     margin-top: 9rem;
+    margin-bottom: 4rem;
     //for large devices
     @include largeDevices {
         height: 450px;
-
+        .aboutText {
+            font-size: 22px;
+        }
+       
         img {
             width: 100%;
             height: 400px;
@@ -46,8 +50,8 @@ body{
             flex-wrap: wrap;
             flex: 1;
             margin-top: 4rem;
+            font-size: 22px;
         }
-
         img {
             width: 100%;
             height: 400px;
@@ -184,7 +188,7 @@ body{
             gap: 0.5rem;
             padding: 10px;
             height: 400px;
-            .detail{
+            p{
                 margin-top: 3rem;
                 text-align: center;
                 font-size: 19px;
@@ -256,7 +260,7 @@ body{
     @include largeDevices{
         height: 500px;
 
-        .detail{
+        p{
             margin-top: 1rem;
             text-align: center;
             font-size: 19px;
