--- a/src/Pages/Blog/blog.module.scss
+++ b/src/Pages/Blog/blog.module.scss
@@ -3,4 +3,5 @@
 body{
     background: #fff;
     height: 100vh;
+    width: 100%;
 }
