--- a/src/Pages/Contact/contact.module.scss
+++ b/src/Pages/Contact/contact.module.scss
@@ -33,7 +33,9 @@ body {
                 height: 50px;
                 margin-bottom: 2rem;
                 margin-top: 2rem;
-
+                .locationText{
+                    font-size: 22px;
+                }
                 img {
                     width: 50px;
                     height: 50px;
@@ -58,7 +60,9 @@ body {
                 height: 50px;
                 margin-bottom: 2rem;
                 margin-top: 2rem;
-
+                .locationText{
+                    font-size: 22px;
+                }
                 img {
                     width: 50px;
                     height: 50px;
